# jarvisprototype

./: .env.example  .gitignore  AGENTS.md  FEATURES.md  README.md  TECHNICAL_CHARACTERISTICS.md  agent_friday.py  electron-builder.config.cjs  error.md  errorarchive.md  jarvis_agent.py  jarvis_server.py  main.py  package-lock.json  package.json  push-out.txt  pyproject.toml  server.py  test-chat-final.cjs  test-token.cjs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-install-site.yml  release-desktop.yml
Jarvis Ui/: AGENTS.md  pnpm-lock.yaml
backend/: package-lock.json  package.json  pnpm-lock.yaml  wrangler.toml
backend/migrations/: 0000_milky_rockslide.sql  0001_add_gemini_key.sql
backend/src/: crypto.ts  index.ts  schema.ts
docs/: ARCHITECTURE.md  DISTRIBUTION.md  EXTENSIONS.md  MARK_XXXV_IMPORTS.md  SECURITY_MODEL.md
extensions/examples/: README.md  deploy.webhook.json  todoist.connector.json  todoist.skill.json
friday/: config.py  credentials.py  safety.py
friday/prompts/: templates.py
friday/resources/: data.py
friday/tools/: __init__.py  file_ops.py  media.py  system.py  utils.py  web.py
scripts/: browser-login-e2e.cjs  build-desktop-ui.cjs  deploy-install-site.cjs  doctor-macos-signing.cjs  e2e_smoke.py  fix-macos-launch.cjs  generate-icons.cjs  install-macos-app.cjs  notarize-macos.cjs  open-desktop-app.cjs  run-electron-builder.cjs  start-electron.cjs  sync-install-site-config.cjs
src/: preload.cjs
tests/: test_friday_smoke.py
(+696 files in other folders)
